tests/ui/errors/snapshots/infer_interface_bound_incompatible_signature.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `File` does not implement `Writer`
    ╭─[test.lis:9:6]
  8 │ impl File {
  9 │   fn write(self: File, data: string) -> string {
    ·      ──┬──
    ·        ╰── `Writer` requires `fn (string) -> int`
 10 │     return "ok";
    ╰────
    ╭─[test.lis:19:14]
 18 │ fn test() {
 19 │   use_writer(File { path: "test.txt" })
    ·              ────────────┬────────────
    ·                          ╰── `Writer` needed here
 20 │ }
    ╰────
  help: Change `write` to return `int` · code: [infer.interface_not_implemented]
