tests/ui/errors/snapshots/infer_interface_bound_multiple_issues.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `File` does not implement `ReadWriter`
    ╭─[test.lis:20:10]
 19 │ fn test() {
 20 │   use_rw(File { path: "test.txt" })
    ·          ────────────┬────────────
    ·                      ╰── `ReadWriter` needed here
 21 │ }
    ╰────
  help: Two methods do not satisfy `ReadWriter`:
        Missing:
          fn read(self: File) -> string
        Incompatible:
          write: expected `fn (string) -> int`, found `fn (string) -> string`
  code: [infer.interface_not_implemented]
