tests/ui/errors/snapshots/infer_interface_bound_not_satisfied.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface not implemented
    ╭─[test.lis:11:14]
 10 │ fn test() {
 11 │   use_writer(42)
    ·              ─┬
    ·               ╰── `int` does not implement `Writer`
 12 │ }
    ╰────
  help: Missing methods:
          From `Writer`
            - write: fn (string) -> int
        code: [infer.interface_not_implemented]
