tests/ui/errors/snapshots/infer_interface_bound_wrong_arity.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `File` does not implement `Writer`
    ╭─[test.lis:9:6]
  8 │ impl File {
  9 │   fn write(self: File) -> int {
    ·      ──┬──
    ·        ╰── `Writer` requires `fn (string) -> int`
 10 │     return 0;
    ╰────
    ╭─[test.lis:19:14]
 18 │ fn test() {
 19 │   use_writer(File { path: "test.txt" })
    ·              ────────────┬────────────
    ·                          ╰── `Writer` needed here
 20 │ }
    ╰────
  help: `Writer` requires `write` to take 1 parameter, not 0 · code: [infer.interface_not_implemented]
